# User_Authentication_System

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  db.py
app/routes/: __init__.py  auth.py
app/services/: __init__.py  auth_service.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  index.html  login.html  register.html
