[tool.poetry]
name = "user-authentication-system"
version = "0.1.0"
description = "Sistema de autenticacao com Flask, frontend e SQLite local"
authors = ["NullCipherr Team"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
flask = "^3.1.3"

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
